[project]
name = "fish-speech"
version = "2.0.0"
description = "Fish Speech (streaming-only)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers<=4.57.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "einops>=0.7.0",
    "loguru>=0.6.0",
    "pydantic==2.9.2",
    "ormsgpack",
    "uvicorn>=0.30.0",
    "kui>=1.6.0",
    "cachetools",
    "safetensors",
    "tiktoken>=0.8.0",
    "click>=8.0.0",
    "pyrootutils>=1.0.4",
    "natsort>=8.4.0",
    "soundfile>=0.12.0",
    "fastapi",
    "httpx",
    "librosa>=0.10.0",
    "audioread>=3.0.0",
    "resampy>=0.4.0",
    "audiotools>=0.5.0",
    "descript-audio-codec>=1.0.0",
]

[project.optional-dependencies]
cpu = ["torch==2.8.0", "torchaudio"]
cu126 = ["torch==2.8.0", "torchaudio"]
cu128 = ["torch==2.8.0", "torchaudio"]
cu129 = ["torch==2.8.0", "torchaudio"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu129" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fish_speech*", "fish_speech_server*", "tools*"]
namespaces = true

[tool.setuptools.package-data]
fish_speech = ["configs/*.yaml"]
fish_speech_server = ["proxy/requirements.txt"]
